Configure FastAPI with MongoDB, create routes, restructure project folders, and update requirements.txt

--- a/website/templates/reviews.html
+++ b/website/templates/reviews.html
@@ -32,7 +32,7 @@
       />
       <div class="scrollBar" id="progress_bar"></div>
       <!--PROGRESS BAR-->
-      <a href="./login.html">
+      <a href="/login">
         <button class="navbarButton">
           <span class="button-text">Login</span>
           <img
@@ -53,28 +53,28 @@
     <div class="plane" id="plane">
         <table>
             <tr>
-                <td id="current"><a href="../../index.html" class="table_link">Home</a></td>
+                <td id="current"><a href="/" class="table_link">Home</a></td>
             </tr>
             <tr>
-                <td><a href="../../documentation.html" class="table_link">Documentation</a></td>
+                <td><a href="/documentation" class="table_link">Documentation</a></td>
             </tr>
             <tr>
-                <td><a href="./versions.html" class="table_link">Versions</a></td>
+                <td><a href="/versions" class="table_link">Versions</a></td>
             </tr>
             <tr>
-                <td><a href="./support.html" class="table_link">Support</a></td>
+                <td><a href="/support" class="table_link">Support</a></td>
             </tr>
             <tr>
-                <td><a href="./contributor.html" class="table_link">Contributors</a></td>
+                <td><a href="/contributor" class="table_link">Contributors</a></td>
             </tr>
             <tr>
-                <td><a href="./reviews.html" class="table_link">Reviews</a></td>
+                <td><a href="/reviews" class="table_link">Reviews</a></td>
             </tr>
             <tr>
-                <td><a href="./license.html" class="table_link">License</a></td>
+                <td><a href="/license" class="table_link">License</a></td>
             </tr>
             <tr>
-                <td><a href="../../404.html" class="table_link">Stunning Visuals</a></td>
+                <td><a href="/404" class="table_link">Stunning Visuals</a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
@@ -89,7 +89,7 @@
         <!-- Reviews will be dynamically inserted here -->
       </div>
     </div>
-    <a href="../../index.html"><button class="goBack">Go To Home</button></a>
+    <a href="/"><button class="goBack">Go To Home</button></a>
     <script src="../scripts/beautifyReviews.js"></script>
     <script src="../scripts/script.js" type="module"></script>
   </body>
