--- a/website/templates/versions.html
+++ b/website/templates/versions.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../web_images/3dlogo.svg" type="image/x-icon">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="shortcut icon" href="../../web_images/3dlogo.svg" type="image/x-icon">
+    <link rel="stylesheet" href="../../styles/style.css">
     <title>Dataverse | Versions</title>
 </head>
 
 <body>
-    <button class="top" id="top" onclick="topFunction()"><img src="../web_images/top.webp" alt=""></button>
+    <button class="top" id="top" onclick="topFunction()"><img src="../../web_images/top.webp" alt=""></button>
     <nav id="navbar">
         <img src="../web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
         <img src="../web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
         <div class="scrollBar" id="progress_bar"></div> <!--PROGRESS BAR-->
-        <a href="../pages/login.html">
+        <a href="/login">
             <button class="navbarButton">
                 <span class="button-text">Login</span>
                 <img src="../web_images/user.png" alt="User Icon" class="user-icon">
@@ -48,30 +48,30 @@
         </button>
     </div>
     <div class="plane" id="plane">
-        <table>
+       <table>
             <tr>
-                <td><a href="../../index.html" class="table_link">Home</a></td>
+                <td id="current"><a href="/" class="table_link">Home</a></td>
             </tr>
             <tr>
-                <td><a href="../../documentation.html" class="table_link">Documentation</a></td>
+                <td><a href="/documentation" class="table_link">Documentation</a></td>
             </tr>
             <tr>
-                <td id="current"><a href="versions.html" class="table_link">Versions</a></td>
+                <td><a href="/versions" class="table_link">Versions</a></td>
             </tr>
             <tr>
-                <td><a href="support.html" class="table_link">Support</a></td>
+                <td><a href="/support" class="table_link">Support</a></td>
             </tr>
             <tr>
-                <td><a href="contributor.html" class="table_link">Contributors</a></td>
+                <td><a href="/contributor" class="table_link">Contributors</a></td>
             </tr>
             <tr>
-                <td><a href="reviews.html" class="table_link">Reviews</a></td>
+                <td><a href="/reviews" class="table_link">Reviews</a></td>
             </tr>
             <tr>
-                <td><a href="license.html" class="table_link">License</a></td>
+                <td><a href="/license" class="table_link">License</a></td>
             </tr>
             <tr>
-                <td><a href="../../404.html" class="table_link">Stunning Visuals</a></td>
+                <td><a href="/404" class="table_link">Stunning Visuals</a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
