--- a/website/templates/contributor.html
+++ b/website/templates/contributor.html
@@ -14,7 +14,7 @@
     <nav id="navbar">
         <img src="../web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
         <img src="../web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
-        <a href="../pages/login.html">
+        <a href="/login">
             <button class="navbarButton">
                 <span class="button-text">Login</span>
                 <img src="../web_images/user.png" alt="User Icon" class="user-icon">
@@ -33,28 +33,28 @@
     <div class="plane" id="plane">
         <table>
             <tr>
-                <td><a href="../../index.html" class="table_link">Home</a></td>
+                <td id="current"><a href="/" class="table_link">Home</a></td>
             </tr>
             <tr>
-                <td><a href="../../documentation.html" class="table_link">Documentation</a></td>
+                <td><a href="/documentation" class="table_link">Documentation</a></td>
             </tr>
             <tr>
-                <td><a href="versions.html" class="table_link">Versions</a></td>
+                <td><a href="/versions" class="table_link">Versions</a></td>
             </tr>
             <tr>
-                <td><a href="support.html" class="table_link">Support</a></td>
+                <td><a href="/support" class="table_link">Support</a></td>
             </tr>
             <tr>
-                <td id="current"><a href="contributor.html" class="table_link">Contributors</a></td>
+                <td><a href="/contributor" class="table_link">Contributors</a></td>
             </tr>
             <tr>
-                <td><a href="reviews.html" class="table_link">Reviews</a></td>
+                <td><a href="/reviews" class="table_link">Reviews</a></td>
             </tr>
             <tr>
-                <td><a href="license.html" class="table_link">License</a></td>
+                <td><a href="/license" class="table_link">License</a></td>
             </tr>
             <tr>
-                <td><a href="../../404.html" class="table_link">Stunning Visuals</a></td>
+                <td><a href="/404" class="table_link">Stunning Visuals</a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
@@ -84,7 +84,7 @@
             </div>
         </section>
     </div>
-    <a href="../../index.html"><button class="goBack">Go To Home</button></a>
+    <a href="/"><button class="goBack">Go To Home</button></a>
 
     <script src="../scripts/contributor.js"></script>
 
