--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -149,7 +149,7 @@
             </div>
         </div>
     </div>
-    <a href="../../index.html"><button class="goBack">Go To Home</button></a>
+    <a href="/"><button class="goBack">Go To Home</button></a>
     <script type="module">
         import {showModal, closeModal, attachToWindow} from '../scripts/sharedUtilities.js';
         var windowFunctions = [];
@@ -261,7 +261,7 @@
             showModal('Login successful!', 'no reply');
             // Redirect to index.html after a short time seconds of showing the modal
             setTimeout(() => {
-                window.location.href = '../../index.html';  
+                window.location.href = '../index.html';  
             }, 1500);
         };
         windowFunctions.push(login);
