--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../../styles/style.css">
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="../web_images/3dlogo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../../web_images/3dlogo.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up to Dataverse</title>
     <style>
@@ -95,7 +95,7 @@
 <body>
     <img class="image1" src="../web_images/2dglow.png" alt="sign_bg">
     <img class="image2" src="../web_images/2dglowhalfbg-removebg-preview.png" alt="sign_bg">
-    <img style="top: 10px; margin-left: 10px; position: relative; width: 80px; height: 80px;" src="../web_images/3d_glow.webp" alt="Dataverse Logo">
+    <img style="top: 10px; margin-left: 10px; position: relative; width: 80px; height: 80px;" src="../../web_images/3d_glow.webp" alt="Dataverse Logo">
     <center>
         <div class="login-container" style="padding-top: 20px;">
             <h1 style="text-align: center; color: rgb(255, 255, 255); font-weight: 400; font: sans-serif;">SIGN UP</h1>
@@ -150,7 +150,7 @@
                 </div>
             </div>
         </div>
-        <a href="../../index.html"><button class="goBack">Go To Home</button></a>
+        <a href="/"><button class="goBack">Go To Home</button></a>
         <script type="module">
             import {showModal, closeModal,  attachToWindow} from '../scripts/sharedUtilities.js';
             var windowFunctions = [];
@@ -195,13 +195,13 @@
                 icon.addEventListener("click", function (event) {
                     if(event.target.previousElementSibling.type === 'password') {
                         event.target.previousElementSibling.type = 'text';
-                        event.target.src = '../web_images/hide_password_icon.png';
+                        event.target.src = '../../web_images/hide_password_icon.png';
                         event.target.previousElementSibling.focus(); 
                         event.target.alt = 'hide password';
                         event.target.nextElementSibling.style.visibility = 'visible';
                     } else {
                         event.target.previousElementSibling.type = 'password';
-                        event.target.src = '../web_images/view_password_icon.png';
+                        event.target.src = '../../web_images/view_password_icon.png';
                         event.target.previousElementSibling.focus(); 
                         event.target.nextElementSibling.style.visibility = 'hidden';
                     }
