Gave proper routing for login and signup page in every template file

--- a/website/templates/contributor.html
+++ b/website/templates/contributor.html
@@ -33,7 +33,7 @@
     <div class="plane" id="plane">
         <table>
             <tr>
-                <td id="current"><a href="/" class="table_link">Home</a></td>
+                <td><a href="/" class="table_link">Home</a></td>
             </tr>
             <tr>
                 <td><a href="/documentation" class="table_link">Documentation</a></td>
@@ -45,7 +45,7 @@
                 <td><a href="/support" class="table_link">Support</a></td>
             </tr>
             <tr>
-                <td><a href="/contributor" class="table_link">Contributors</a></td>
+                <td id="current"><a href="/contributor" class="table_link">Contributors</a></td>
             </tr>
             <tr>
                 <td><a href="/reviews" class="table_link">Reviews</a></td>
