--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -45,7 +45,7 @@
         <img src="../web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
         <img src="../web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
         <div class="scrollBar" id="progress_bar"></div> <!--PROGRESS BAR-->
-        <a href="./pages/login.html">
+        <a href="/login">
             <button class="navbarButton">
                 <span class="button-text">Login</span>
                 <img src="../web_images/user.png" alt="User Icon" class="user-icon">
