--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -133,7 +133,7 @@
             </div>
             <button type="button" class="btn btn-primary" id="loginButton" style="width: 50%; font-weight: 400;" onclick="login(event)">LOGIN</button>
             <div style="text-align: center; margin-top: 10px;">
-                <p style="color: white;">Don't have an account? <a href="signup.html" style="text-decoration: underline; color: #004ab7;"> Sign Up</a></p>
+                <p style="color: white;">Don't have an account? <a href="/signup" style="text-decoration: underline; color: #004ab7;"> Sign Up</a></p>
             </div>
         </div>
         <!--login form end-->
