--- a/website/templates/reviews.html
+++ b/website/templates/reviews.html
@@ -9,12 +9,12 @@
       type="image/x-icon"
     />
     <title>Dataverse Reviews</title>
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/reviews.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <link rel="stylesheet" href="../styles/style.css">
   </head>
   <body>
     <nav id="navbar">
@@ -53,7 +53,7 @@
     <div class="plane" id="plane">
         <table>
             <tr>
-                <td id="current"><a href="/" class="table_link">Home</a></td>
+                <td><a href="/" class="table_link">Home</a></td>
             </tr>
             <tr>
                 <td><a href="/documentation" class="table_link">Documentation</a></td>
@@ -68,7 +68,7 @@
                 <td><a href="/contributor" class="table_link">Contributors</a></td>
             </tr>
             <tr>
-                <td><a href="/reviews" class="table_link">Reviews</a></td>
+                <td id="current"><a href="/reviews" class="table_link">Reviews</a></td>
             </tr>
             <tr>
                 <td><a href="/license" class="table_link">License</a></td>
