--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -136,7 +136,7 @@
 
             <button type="button" class="btn btn-primary" id="signupButton" style="width: 60%; margin-top: 15px; font-weight: 400;" onclick="signup(event)">SIGN UP</button>
             <div style="text-align: center; margin-top: 10px;">
-                <p style="color: white;">Already have an account? <a href="login.html" style="text-decoration: underline; color: #004ab7;">Login</a></p>
+                <p style="color: white;">Already have an account? <a href="/login" style="text-decoration: underline; color: #004ab7;">Login</a></p>
             </div>
         </div>
         <div id="modal" class="modal">
