--- a/website/templates/support.html
+++ b/website/templates/support.html
@@ -104,7 +104,7 @@
         <div class="plane" id="plane">
           <table>
             <tr>
-                <td id="current"><a href="/" class="table_link">Home</a></td>
+                <td><a href="/" class="table_link">Home</a></td>
             </tr>
             <tr>
                 <td><a href="/documentation" class="table_link">Documentation</a></td>
@@ -113,7 +113,7 @@
                 <td><a href="/versions" class="table_link">Versions</a></td>
             </tr>
             <tr>
-                <td><a href="/support" class="table_link">Support</a></td>
+                <td id="current"><a href="/support" class="table_link">Support</a></td>
             </tr>
             <tr>
                 <td><a href="/contributor" class="table_link">Contributors</a></td>
