--- a/website/templates/license.html
+++ b/website/templates/license.html
@@ -49,7 +49,7 @@
     <div class="plane" id="plane">
         <table>
             <tr>
-                <td id="current"><a href="/" class="table_link">Home</a></td>
+                <td><a href="/" class="table_link">Home</a></td>
             </tr>
             <tr>
                 <td><a href="/documentation" class="table_link">Documentation</a></td>
@@ -67,7 +67,7 @@
                 <td><a href="/reviews" class="table_link">Reviews</a></td>
             </tr>
             <tr>
-                <td><a href="/license" class="table_link">License</a></td>
+                <td id="current"><a href="/license" class="table_link">License</a></td>
             </tr>
             <tr>
                 <td><a href="/404" class="table_link">Stunning Visuals</a></td>
