--- a/website/templates/versions.html
+++ b/website/templates/versions.html
@@ -50,13 +50,13 @@
     <div class="plane" id="plane">
        <table>
             <tr>
-                <td id="current"><a href="/" class="table_link">Home</a></td>
+                <td><a href="/" class="table_link">Home</a></td>
             </tr>
             <tr>
                 <td><a href="/documentation" class="table_link">Documentation</a></td>
             </tr>
             <tr>
-                <td><a href="/versions" class="table_link">Versions</a></td>
+                <td id="current"><a href="/versions" class="table_link">Versions</a></td>
             </tr>
             <tr>
                 <td><a href="/support" class="table_link">Support</a></td>
