--- a/website/styles/style.css
+++ b/website/styles/style.css
@@ -1197,9 +1197,10 @@ input {
 
 #versions{
     width: 50vw;
-    margin-top: 70px;
-    border: 1px solid rgba(128, 128, 128, 0.352);
-    margin-left: 20px;
+    margin-top: 0px;
+    border: 2px solid rgba(128, 128, 128, 0.352);
+    margin-left: auto;
+    margin-right: auto;
 }
 #versions td{
     padding: 10px;
