Updated URLs for static files

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dataverse</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <link rel="shortcut icon" href="../web_images/3dlogo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="/web_images/3dlogo.svg" type="image/x-icon">
     <link rel="stylesheet" href="../styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -20,7 +20,7 @@
 <body id="body">
     <!-- preloader -->
     <div id="video-loader">
-        <video src="../web_images/loader.mp4" alt="Dataverse" autoplay muted>Your browser does not support the
+        <video src="/web_images/loader.mp4" alt="Dataverse" autoplay muted>Your browser does not support the
             video tag.</video>
     </div>
     <div class="buttons" id="buttons">
@@ -37,18 +37,18 @@
             </button>
         </div>
         <button id="defaultButton" onclick="systemDefault()">
-            <img src="../web_images/settings.webp" class="copy" id="default">
+            <img src="/web_images/settings.webp" class="copy" id="default">
         </button>
     </div>
-    <button class="top" id="top" onclick="topFunction()"><img src="website/web_images/top.webp" alt=""></button>
+    <button class="top" id="top" onclick="topFunction()"><img src="/web_images/top.webp" alt=""></button>
     <nav id="navbar">
-        <img src="../web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
-        <img src="../web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
+        <img src="/web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
+        <img src="/web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
         <div class="scrollBar" id="progress_bar"></div> <!--PROGRESS BAR-->
         <a href="/login">
             <button class="navbarButton">
                 <span class="button-text">Login</span>
-                <img src="../web_images/user.png" alt="User Icon" class="user-icon">
+                <img src="/web_images/user.png" alt="User Icon" class="user-icon">
             </button>
         </a>
     </nav>
@@ -143,14 +143,14 @@
             </p>
         </div>
         <div class="about_right reveal">
-            <img src="../web_images/about_up.webp" class="preview up">
-            <img src="../web_images/about_down.webp" class="preview down">
+            <img src="/web_images/about_up.webp" class="preview up">
+            <img src="/web_images/about_down.webp" class="preview down">
         </div>
     </div>
     <div class="section" id="finance">
         <div class="finance_left reveal">
-            <img src="../web_images/finance_up.webp" class="preview up">
-            <img src="../web_images/finance_down.webp" class="preview down">
+            <img src="/web_images/finance_up.webp" class="preview up">
+            <img src="/web_images/finance_down.webp" class="preview down">
         </div>
         <div class="finance_right">
             <p class="subheading reveal">Track Finances!</p>
@@ -164,43 +164,43 @@
         <p class="heading reveal">Here are some examples of what you can do with Dataverse</p>
         <div class="examples reveal" id="examples">
 
-            <img src="../web_images/volcano.gif" alt="">
-            <img src="../web_images/live.gif" alt="">
+            <img src="/web_images/volcano.gif" alt="">
+            <img src="/web_images/live.gif" alt="">
             <img src="https://i0.wp.com/learnbyinsight.com/wp-content/uploads/2020/09/sub-plot.png?resize=600%2C398&ssl=1"
                 alt="">
             <img src="https://docs.sympy.org/latest/_images/plotting-16.png" alt="">
-            <img src="../web_images/galaxy.webp" alt="">
-            <img src="../web_images/3d.gif" alt="">
-            <img src="../web_images/volcano.gif" alt="">
-            <img src="../web_images/live.gif" alt="">
+            <img src="/web_images/galaxy.webp" alt="">
+            <img src="/web_images/3d.gif" alt="">
+            <img src="/web_images/volcano.gif" alt="">
+            <img src="/web_images/live.gif" alt="">
             <img src="https://i0.wp.com/learnbyinsight.com/wp-content/uploads/2020/09/sub-plot.png?resize=600%2C398&ssl=1"
                 alt="">
             <img src="https://docs.sympy.org/latest/_images/plotting-16.png" alt="">
-            <img src="../web_images/galaxy.webp" alt="">
-            <img src="../web_images/3d.gif" alt="">
+            <img src="/web_images/galaxy.webp" alt="">
+            <img src="/web_images/3d.gif" alt="">
 
 
         </div>
         <div class="examples reveal" id="examples2">
 
             <img src="https://matplotlib.org/stable/_images/sphx_glr_polar_scatter_001.png" alt="">
-            <img src="../web_images/wordcloud.png" alt="">
+            <img src="/web_images/wordcloud.png" alt="">
             <img src="https://www.pythoncharts.com/matplotlib/radar-charts/images/radar-chart-step1.png" alt="">
             <img src="https://discourse.matplotlib.org/uploads/default/original/2X/4/4a1f2f7f8f90b98517aa85b8b984d4c9a3a94c72.jpeg"
                 alt="">
             <img src="https://miro.medium.com/v2/resize:fit:1188/1*kpksgzDd6qKP2h6GM7OVCA.png" alt="">
             <img src="https://miro.medium.com/v2/resize:fit:1140/1*Lc5VzM9Yo4775Omc-vqddQ.png" alt="">
-            <img src="website/web_images/portal.webp" alt="">
-            <img src="website/web_images/stars.webp" alt="">
+            <img src="/web_images/portal.webp" alt="">
+            <img src="/web_images/stars.webp" alt="">
             <img src="https://matplotlib.org/stable/_images/sphx_glr_polar_scatter_001.png" alt="">
-            <img src="../web_images/wordcloud.png" alt="">
+            <img src="/web_images/wordcloud.png" alt="">
             <img src="https://www.pythoncharts.com/matplotlib/radar-charts/images/radar-chart-step1.png" alt="">
             <img src="https://discourse.matplotlib.org/uploads/default/original/2X/4/4a1f2f7f8f90b98517aa85b8b984d4c9a3a94c72.jpeg"
                 alt="">
             <img src="https://miro.medium.com/v2/resize:fit:1188/1*kpksgzDd6qKP2h6GM7OVCA.png" alt="">
             <img src="https://miro.medium.com/v2/resize:fit:1140/1*Lc5VzM9Yo4775Omc-vqddQ.png" alt="">
-            <img src="../web_images/portal.webp" alt="">
-            <img src="../web_images/stars.webp" alt="">
+            <img src="/web_images/portal.webp" alt="">
+            <img src="/web_images/stars.webp" alt="">
         </div>
     </div>
 
@@ -240,8 +240,8 @@
                 </button></a>
         </div>
         <div class="develop_right reveal">
-            <img src="../web_images/develop_up.webp" class="preview up develop_theme">
-            <img src="../web_images/develop_down.webp" class="preview down develop_theme">
+            <img src="/web_images/develop_up.webp" class="preview up develop_theme">
+            <img src="/web_images/develop_down.webp" class="preview down develop_theme">
         </div>
     </div>
     <footer id="footer">
@@ -272,7 +272,7 @@
         <div class="left_links">
             <div class="contact">
                 <div class="name">
-                    <img src="../web_images/2dlogo.svg" alt="" class="end-logo" id="end-logo">
+                    <img src="/web_images/2dlogo.svg" alt="" class="end-logo" id="end-logo">
                     <a class="subheading" href="index.html" id="last_link">Dataverse</a>
                 </div>
             </div>
