--- a/website/templates/documentation.html
+++ b/website/templates/documentation.html
@@ -79,12 +79,12 @@
 
 <body>
     <nav id="navbar">
-        <img src="../web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
-        <img src="../web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
+        <img src="/web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
+        <img src="/web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
         <a href="/login">
             <button class="navbarButton">
                 <span class="button-text">Login</span>
-                <img src="../web_images/user.png" alt="User Icon" class="user-icon">
+                <img src="/web_images/user.png" alt="User Icon" class="user-icon">
             </button>
         </a>
     </nav>
